--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -296,7 +296,51 @@
       "\n",
       "Epoch 00005: loss improved from 2.49676 to 2.43634, saving model to models\\weights-improvement-05-2.4363.hdf5\n",
       "Epoch 6/20\n",
-      "  5504/144242 [>.............................] - ETA: 3:49 - loss: 2.3474"
+      "144242/144242 [==============================] - 242s 2ms/step - loss: 2.3792\n",
+      "\n",
+      "Epoch 00006: loss improved from 2.43634 to 2.37920, saving model to models\\weights-improvement-06-2.3792.hdf5\n",
+      "Epoch 7/20\n",
+      "144242/144242 [==============================] - 240s 2ms/step - loss: 2.3281\n",
+      "\n",
+      "Epoch 00007: loss improved from 2.37920 to 2.32808, saving model to models\\weights-improvement-07-2.3281.hdf5\n",
+      "Epoch 8/20\n",
+      "144242/144242 [==============================] - 241s 2ms/step - loss: 2.2815\n",
+      "\n",
+      "Epoch 00008: loss improved from 2.32808 to 2.28152, saving model to models\\weights-improvement-08-2.2815.hdf5\n",
+      "Epoch 9/20\n",
+      "144242/144242 [==============================] - 239s 2ms/step - loss: 2.2354\n",
+      "\n",
+      "Epoch 00009: loss improved from 2.28152 to 2.23536, saving model to models\\weights-improvement-09-2.2354.hdf5\n",
+      "Epoch 10/20\n",
+      "144242/144242 [==============================] - 234s 2ms/step - loss: 2.1905\n",
+      "\n",
+      "Epoch 00010: loss improved from 2.23536 to 2.19045, saving model to models\\weights-improvement-10-2.1905.hdf5\n",
+      "Epoch 11/20\n",
+      "144242/144242 [==============================] - 228s 2ms/step - loss: 2.1490\n",
+      "\n",
+      "Epoch 00011: loss improved from 2.19045 to 2.14901, saving model to models\\weights-improvement-11-2.1490.hdf5\n",
+      "Epoch 12/20\n",
+      "144242/144242 [==============================] - 236s 2ms/step - loss: 2.1099\n",
+      "\n",
+      "Epoch 00012: loss improved from 2.14901 to 2.10986, saving model to models\\weights-improvement-12-2.1099.hdf5\n",
+      "Epoch 13/20\n",
+      "144242/144242 [==============================] - 242s 2ms/step - loss: 2.0720\n",
+      "\n",
+      "Epoch 00013: loss improved from 2.10986 to 2.07198, saving model to models\\weights-improvement-13-2.0720.hdf5\n",
+      "Epoch 14/20\n",
+      "144242/144242 [==============================] - 248s 2ms/step - loss: 2.0398\n",
+      "\n",
+      "Epoch 00014: loss improved from 2.07198 to 2.03982, saving model to models\\weights-improvement-14-2.0398.hdf5\n",
+      "Epoch 15/20\n",
+      "144242/144242 [==============================] - 249s 2ms/step - loss: 2.0075\n",
+      "\n",
+      "Epoch 00015: loss improved from 2.03982 to 2.00750, saving model to models\\weights-improvement-15-2.0075.hdf5\n",
+      "Epoch 16/20\n",
+      "144242/144242 [==============================] - 250s 2ms/step - loss: 1.9738\n",
+      "\n",
+      "Epoch 00016: loss improved from 2.00750 to 1.97377, saving model to models\\weights-improvement-16-1.9738.hdf5\n",
+      "Epoch 17/20\n",
+      "134784/144242 [===========================>..] - ETA: 16s - loss: 1.9454"
      ]
     }
    ],
