--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -340,7 +340,11 @@
       "\n",
       "Epoch 00016: loss improved from 2.00750 to 1.97377, saving model to models\\weights-improvement-16-1.9738.hdf5\n",
       "Epoch 17/20\n",
-      "134784/144242 [===========================>..] - ETA: 16s - loss: 1.9454"
+      "144242/144242 [==============================] - 250s 2ms/step - loss: 1.9455\n",
+      "\n",
+      "Epoch 00017: loss improved from 1.97377 to 1.94546, saving model to models\\weights-improvement-17-1.9455.hdf5\n",
+      "Epoch 18/20\n",
+      " 58368/144242 [===========>..................] - ETA: 2:32 - loss: 1.9097"
      ]
     }
    ],
